# Jeeves

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindMySQL.cmake
dep/: CMakeLists.txt
src/: common.h  discord_guild.cpp  discord_guild.h  exception.cpp  exception.h  main.cpp  mimiron.cpp  mimiron.h
src/commands/: command_handler.cpp  command_handler.h  guild_command.cpp  guild_command.h  guildbook_command.cpp  guildbook_command.h
src/database/: common.h  conditions.h  database.cpp  database.h  query.h  table.h
src/database/tables/: discord_guild.h  wow_guild.h
src/tools/: cache.h  parse_json.h  string_literal.h  tools.h  tuple.h  worker.cpp  worker.h
src/wow/: character.cpp  character.h  guild.cpp  guild.h
src/wow/api/: api_handler.cpp  api_handler.h  localized_string.cpp  localized_string.h  realm.h  region.h  resource_manager.cpp  resource_manager.h  wow_api.h
src/wow/guildbook/: guildbook_data.cpp  guildbook_data.h
